--- a/Customer-Segmentation.ipynb
+++ b/Customer-Segmentation.ipynb
@@ -4430,7 +4430,7 @@
     }
    ],
    "source": [
-    "# df = df.merge(df_rmf[['CustomerID', 'cluster']], on='CustomerID', how='left')\n",
+    "df = df.merge(df_rmf[['CustomerID', 'cluster']], on='CustomerID', how='left')\n",
     "df.head(-5)"
    ]
   },
